Suppress native placeholder text on MacOS Input Type=Search

The OS X 10.11 SDK introduced a change whereby the "Search" placeholder
text is no longer suppressed by setting setCenteredLook to NO on the
NSSearchFieldCell control. Instead, we now explicitly invoke
|setPlaceholderString| on the control.

Bug: 752362
Change-Id: I0da791fa3510d682731c5d64971ac669a7608d5a